<resources>
    <string name="app_name">邑智家</string>
    <string name="title_home">缴费</string>
    <string name="title_maintain">维修</string>
    <string name="title_unlocking">开锁</string>
    <string name="title_complain">投诉</string>
    <string name="title_mine">我的</string>
    <string name="person_info">个人信息</string>
    <string name="photo_look">图片查看</string>

    <string name="login">登录</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="wechat_login">微信登录</string>
    <string name="phone_login">手机号登录</string>
    <string name="get_code">获取短信验证码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_login">验证并登录</string>

    <string name="mine_wechat_nick">电话号码:%s</string>
    <string name="wechat_nick">微信昵称:%s</string>
    <string name="wechat_num">微信公众号:宣邑科技</string>
    <string name="version">版本:v%s</string>
    <string name="current_property">当前物业</string>
    <string name="property_address">物业地址</string>
    <string name="property_amount">缴费物业</string>
    <string name="order_status">订单状态</string>
    <string name="account_certification">账号认证</string>
    <string name="account_authorise">账号授权</string>
    <string name="pay_recode">缴费记录</string>
    <string name="about_us">关于我们</string>
    <string name="my_pro">我的物业</string>
    <string name="exit_login">退出登录</string>
    <string name="click_to_maintain">点击报修</string>
    <string name="maintain">报修</string>
    <string name="complain_advice">投诉建议</string>
    <string name="question_des">问题描述</string>
    <string name="sure_submit">确认提交</string>
    <string name="maintain_progress">维修进度</string>
    <string name="maintain_complete">维修完成</string>
    <string name="feedback_progress">反馈进度</string>
    <string name="tip_maintain">维修价格请参考物业消息</string>
    <string name="maintain_phone">如有疑问请联系物业管理公司</string>
    <string name="phone_num">022-26145896</string>
    <string name="cant_resolve">无法解决</string>
    <string name="click_complain">点击投诉</string>
    <string name="very_nice">非常满意</string>
    <string name="contact_us">联系我们:</string>
    <string name="phone">电话:</string>
    <string name="announce_detail">消息详情</string>
    <string name="profile">简介:</string>
    <string name="sssssss">据xx市纪委、市委组织部、市人事局、市监察局、市维护稳定及综治办 等5部门联合制订的《关于加强私人出租屋业主监督管理的若干意见(试 行)》规定，凡在xx市范围内从事房屋租赁经营的个人，在租赁关系确立 后10天内，应自觉在房屋所在地租赁管理所办理合同登记或备案手续。 逾期没有登记或者备案的，由租赁管理部门一次性处以合同期租金总额 20%的罚款，并追缴租赁管理费、代征税款和滞纳金。 房屋出租人有协助有关部门做好社会治安综合治理工作的义务，租赁关 系确立后，应在3日内督促、协助承租人到出租屋综合管理机关办理租住 人员信息登记，否则，由主管部门处以月租金额一倍的罚款。 管理处诚 请承租人能主动向花城社区警务室登记人员信息，出租人能督促、协助 承租人办理登记备案手续。 目前该规定意见征集期已过，不久就会和市民见面</string>
    <string name="profile_content">　　邑智家APP为物业公司提供便捷的线上管理运营模式，智能硬件、软件相结合，达到增加物业公司办事效率，节省人力；提高业主对物业公司的满意度的效果。可以对小区情况实时监控、对小区数据的统计和查询，还能满足小区业主的服务需求。\n
业主服务功能：为业主提供线上缴费、消息通知、申诉、维修、社交等便捷服务。
　　智能门禁系统：出入无须携带门禁卡，提供手机APP、门禁卡两种开启方式，可远程控制。\n
　　加强安防：门禁搭载访客系统，业主可直接发送密码至访客手机，访客在门禁上输入密码即可进入。\n
　　梯控一键呼叫：使用手机APP开启单元门后无须再次操作直接呼叫电梯。\n
　　家门口的气象局：应用云空气监测系统，对社区空气质量进行实时监测，及时反应于用户端，方便业主合理安排出行计划。\n
　　区域团购：邑智家优价低活APP定期举行农副产品，生活用品的团购活动，品优价廉，极大便利了业主生活。</string>

    <string name="maintain_order_number">单号  %s</string>
    <string name="maintain_date">日期  %s</string>
    <string name="transaction_money">缴费金额</string>
    <string name="transaction_time">缴费时间</string>
    <string name="money_name">缴费内容</string>
    <string name="origin_money">原价 %s </string>
    <string name="change_address">点击切换地址</string>
    <string name="more">更多...</string>
    <string name="announcement">消息中心</string>
    <string name="yuan">元</string>
    <string name="yuan_s">%s元</string>
    <string name="yuan_yuan">¥ </string>
    <string name="system_announcement">系统消息</string>
    <string name="community_announcement">小区消息</string>

    <string name="pay_money">缴费金额</string>
    <string name="pay_money_no">缴费单号</string>
    <string name="pay_much">缴费数量</string>
    <string name="pay_time_month">一个月</string>
    <string name="pay_time_quarter">三个月</string>
    <string name="pay_time_year">一年</string>
    <string name="name">业主户名</string>
    <string name="construction_area">建筑面积</string>
    <string name="unit_price">单价</string>
    <string name="property_money_date">物业费到期日</string>
    <string name="square_meters">%s平米</string>
    <string name="square_meters_unit">%s月</string>
    <string name="by_square_meters">%s元/平米</string>
    <string name="next_step">下一步</string>
    <string name="phone_num_txt">手机号</string>
    <string name="wechat_num_txt">微信号</string>
    <string name="add_address">+　添加地址</string>
    <string name="add_peoples">+　添加人员</string>
    <string name="add_address_no">添加地址</string>
    <string name="add_name">姓　名</string>
    <string name="certification_num">身份证</string>
    <string name="te_num">手机号</string>
    <string name="my_address">我的地址</string>
    <string name="location">所在小区</string>
    <string name="submit_info">提交信息</string>
    <string name="families">家庭成员</string>
    <string name="tenant">租客</string>
    <string name="delete">删除</string>
    <string name="sure_add">确认添加</string>
    <string name="add_people">添加人员</string>
    <string name="app_loading">加载中...</string>
    <string name="loading_failure">加载失败,点击重试</string>
    <string name="no_data">暂无数据</string>
    <string name="login_voice">收不到短信？使用语音验证码</string>
    <string name="click_retry">点击重试</string>
    <string name="retry">%s重发</string>
    <string name="sure_to_logout">是否退出账号</string>
    <string name="app_cancel">取消</string>
    <string name="app_logout">退出</string>
    <string name="content_detail">内容详情</string>
    <string name="app_copy">Copyright © 2017 邑智家版权所有</string>


    <string name="ad_count_time">跳过(%s秒)</string>


    <string name="txt_splash_show">邑智家社区服务APP</string>
</resources>
