<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/nav_home_un"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_maintain"
        android:icon="@mipmap/nav_maintain_un"
        android:title="@string/title_maintain"/>

    <item
        android:id="@+id/navigation_unlocking"
        android:icon="@mipmap/nav_unlocking_un"
        android:title="@string/title_unlocking"/>

    <item
        android:id="@+id/navigation_complain"
        android:icon="@mipmap/nav_unlocking_un"
        android:title="@string/title_complain"/>

    <item
        android:id="@+id/navigation_mine"
        android:icon="@mipmap/nav_mine_un"
        android:title="@string/title_mine"/>

</menu>
