<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <com.community.life.ui.view.WithBackTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/about_us_top_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/about_us_top"
                />
            <TextView
                android:id="@+id/about_us_top_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/font_14"
                android:textColor="@color/colorLoginTxt"
                android:text="@string/version"
                android:layout_marginBottom="30dp"
                android:layout_alignBottom="@id/about_us_top_img"/>
        </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="@dimen/font_16"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/profile"
                android:background="@android:color/white"
                android:textColor="@android:color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorLine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/profile_content"
                android:background="@android:color/white"
                android:textColor="@color/colorLoginTxt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/contact_us"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:background="@android:color/white"
                android:textColor="@android:color/black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_14"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/phone"
                    android:textColor="@color/colorLoginTxt"/>
                <com.community.life.ui.view.NoLineTextView
                    android:id="@+id/about_us_phone1_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_14"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="170-9002-4334"
                    android:autoLink="phone"
                    android:textColor="@color/colorLoginTxt"/>
                <com.community.life.ui.view.NoLineTextView
                    android:id="@+id/about_us_phone2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_14"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="170-9002-4334"
                    android:autoLink="phone"
                    android:textColor="@color/colorLoginTxt"/>
            </LinearLayout>
            <TextView
                android:id="@+id/about_us_wechat_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_14"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:background="@android:color/white"
                android:text="@string/wechat_num"
                android:paddingBottom="50dp"
                android:textColor="@color/colorLoginTxt"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorLine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_14"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:text="@string/app_copy"
                android:paddingBottom="30dp"
                android:textColor="@color/colorLoginTxt"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
