<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <com.community.life.ui.view.WithBackTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="16dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/icon_phone_dark"
                />
            <EditText
                android:id="@+id/login_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:textColor="@color/colorLoginTxt"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/input_phone"
                android:textSize="@dimen/font_16"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/login_code_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_code_dark"
                />
            <TextView
                android:id="@+id/login_get_code_tv"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/get_code"
                android:gravity="center"
                android:textSize="@dimen/font_14"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorLoginTxt"/>
            <View
                android:id="@+id/login_line_view"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/login_get_code_tv"
                android:layout_marginBottom="10dp"
                android:background="@color/colorLine"/>
            <EditText
                android:id="@+id/login_code_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/login_code_img"
                android:lines="1"
                android:hint="@string/input_code"
                android:layout_toLeftOf="@id/login_line_view"
                android:textColor="@color/colorLoginTxt"
                android:inputType="number"
                android:maxLength="11"
                android:textSize="@dimen/font_16"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>
    </LinearLayout>
    <TextView
        android:id="@+id/login_by_voice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_voice"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_gravity="right"
        android:textSize="@dimen/font_14"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorLoginTxt"/>
    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/code_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_20"
        android:gravity="center"
        android:background="@drawable/bg_wechat_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"/>
</LinearLayout>
