<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <com.community.life.ui.view.IconTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:background="@android:color/white">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="16dp"
                   android:paddingRight="16dp">
                   <TextView
                       android:id="@+id/pay_money_left_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/colorLoginTxt"
                       android:layout_centerVertical="true"
                       android:textSize="@dimen/font_15"
                       android:text="@string/pay_money"/>
                   <TextView
                       android:id="@+id/pay_money_right_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:textSize="@dimen/font_14"
                       android:textColor="#ababab"
                       android:layout_alignParentRight="true"
                       android:layout_marginRight="16dp"
                       android:text="@string/origin_money"/>
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="45dp"
                       android:layout_marginLeft="12dp"
                       android:layout_marginRight="12dp"
                       android:layout_marginTop="12dp"
                       android:layout_marginBottom="12dp"
                       android:layout_toLeftOf="@id/pay_money_right_tv"
                       android:layout_toRightOf="@id/pay_money_left_tv"
                       android:background="@drawable/border_bg">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
                           android:paddingLeft="10dp"
                           android:layout_marginRight="10dp"
                           android:textColor="@color/colorLoginTxt"
                           tools:text="4,000"
                           android:textSize="@dimen/font_16"
                           />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:layout_marginRight="10dp"
                       android:textColor="@color/colorLoginTxt"
                       android:text="@string/yuan"
                       android:textSize="@dimen/font_14"
                       />

                   </RelativeLayout>

               </RelativeLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:paddingLeft="16dp"
                   android:paddingRight="16dp"
                  >
                   <TextView
                       android:id="@+id/pay_much_left_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/colorLoginTxt"
                       android:layout_gravity="center_vertical"
                       android:layout_centerVertical="true"
                       android:textSize="@dimen/font_15"
                       android:text="@string/pay_much"/>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_marginLeft="12dp"
                       >
                       <TextView
                           android:id="@+id/pay_time_month_tv"
                           android:layout_width="0dp"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:text="@string/pay_time_month"
                           android:layout_height="45dp"
                           android:background="@drawable/pay_time_bg"
                           android:textColor="@drawable/pay_time_color"/>
                       <TextView
                           android:id="@+id/pay_time_quarter_tv"
                           android:layout_width="0dp"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:layout_marginLeft="10dp"
                           android:text="@string/pay_time_quarter"
                           android:layout_height="45dp"
                           android:background="@drawable/pay_time_bg"
                           android:textColor="@drawable/pay_time_color"/>
                       <TextView
                           android:id="@+id/pay_time_year_tv"
                           android:layout_width="0dp"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:layout_marginLeft="10dp"
                           android:text="@string/pay_time_year"
                           android:layout_height="45dp"
                           android:background="@drawable/pay_time_bg"
                           android:textColor="@drawable/pay_time_color"/>
                   </LinearLayout>
               </LinearLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/font_10"
                   android:textColor="#ff7a4b"
                   android:gravity="center_horizontal"
                   android:layout_marginTop="3dp"
                   android:paddingBottom="8dp"
                   android:text="优惠信息：一次性缴费1年，优惠2个月"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1px"
                   android:background="@color/line_color"/>

               <com.community.life.ui.view.PropertyAddressView
                   android:id="@+id/pay_property_address"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1px"
                   android:background="@color/line_color"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="200dp"
                   android:background="@android:color/white"
                   android:orientation="horizontal">

               </LinearLayout>

           </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
