<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bg">
    <com.iot12369.easylifeandroid.ui.view.WithBackTitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_16"
            android:textColor="@color/colorLoginTxt"
            android:text="@string/property_address"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_16"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorLoginTxt"
            android:text="天津市南开区丁香郡小区\n9号楼三单元402"
            android:gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_people_name_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/add_name"
            android:textColor="@color/colorCertification"
            android:textSize="@dimen/font_16"
            android:minEms="4"/>
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_red_dot"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            />
        <EditText
            android:id="@+id/add_people_name_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginRight="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/border_bg"
            android:layout_toRightOf="@id/add_people_name_left"
            android:lines="1"
            android:textColor="@color/colorCertification"
            android:textSize="@dimen/font_16" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_people_phone_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/te_num"
            android:textColor="@color/colorCertification"
            android:textSize="@dimen/font_16"
            android:minEms="4"/>
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_red_dot"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            />
        <EditText
            android:id="@+id/add_people_phone_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginRight="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/border_bg"
            android:layout_toRightOf="@id/add_people_phone_left"
            android:lines="1"
            android:textColor="@color/colorCertification"
            android:textSize="@dimen/font_16" />
    </RelativeLayout>
    <TextView
        android:id="@+id/add_people_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_wechat_login"
        android:textSize="@dimen/font_20"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:text="@string/sure_add"
        />
</LinearLayout>
